2010-01-28  Gustavo Noronha Silva  <gns@gnome.org>

        Reviewed by Eric Carlson.

        [GTK] Pass cookies to GStreamer
        https://bugs.webkit.org/show_bug.cgi?id=34003

        Test that cookie is being sent by the media player.

        * http/tests/media/resources/setCookie.cgi: Added.
        * http/tests/media/resources/video-cookie-check-cookie.php: Added.
        * http/tests/media/video-cookie-expected.txt: Added.
        * http/tests/media/video-cookie.html: Added.

2010-01-28  Csaba Osztrogonác  <ossy@webkit.org>

        [Qt] Incorrect small caps vs. normal text handling
        https://bugs.webkit.org/show_bug.cgi?id=34286

        * platform/qt/Skipped: css2.1/t1505-c524-font-var-00-b.html skipped

2010-01-27  Evan Martin  <evan@chromium.org>

        Reviewed by David Levin.

        [chromium] hebrew vowel marks incorrectly positioned
        https://bugs.webkit.org/show_bug.cgi?id=34234

        Add a layout test containing some Hebrew vowels.

        * fast/text/international/hebrew-vowels.html: Added.

2010-01-28  Dimitri Glazkov  <dglazkov@chromium.org>

        Unreviewed, trivial baseline update.

        Update baseline for "Animated scaling of background-image is too slow"
        https://bugs.webkit.org/show_bug.cgi?id=33808

        * platform/mac/fast/backgrounds/size/backgroundSize16-expected.checksum:
        * platform/mac/fast/backgrounds/size/backgroundSize16-expected.png:

2010-01-28  Adam Barth  <abarth@webkit.org>

        Reviewed by David Levin.

        Remove XSSAuditor false positive for Google Translate
        https://bugs.webkit.org/show_bug.cgi?id=34242

        Add a test that we allow attackers to inject directly into the href
        property of the base tag.

        * http/tests/security/xssAuditor/base-href-direct-expected.txt: Added.
        * http/tests/security/xssAuditor/base-href-direct.html: Added.
        * http/tests/security/xssAuditor/resources/echo-head-base-href-direct.pl: Added.
