@@ -1,17 +1,17 @@
 layer at (0,0) size 800x600
   RenderView at (0,0) size 800x600
-layer at (0,0) size 800x52
-  RenderBlock {html} at (0,0) size 800x52
-    RenderBody {body} at (8,16) size 784x20
-      RenderBlock {p} at (0,0) size 784x20
+layer at (0,0) size 800x54
+  RenderBlock {html} at (0,0) size 800x54
+    RenderBody {body} at (8,16) size 784x22
+      RenderBlock {p} at (0,0) size 784x22
         RenderText {#text} at (0,0) size 64x18
           text run at (0,0) width 64: "subscript: "
-        RenderBlock {math} at (64,3) size 13x17
-          RenderBlock {msub} at (0,0) size 13x17
+        RenderBlock {math} at (64,2) size 13x20
+          RenderBlock {msub} at (0,0) size 13x20
             RenderInline {mi} at (0,0) size 7x16
-              RenderText {#text} at (0,0) size 7x16
-                text run at (0,0) width 7: "x"
+              RenderText {#text} at (0,1) size 7x16
+                text run at (0,1) width 7: "x"
             RenderInline {mn} at (0,0) size 6x12
-              RenderText {#text} at (7,7) size 6x12
-                text run at (7,7) width 6: "1"
+              RenderText {#text} at (7,8) size 6x12
+                text run at (7,8) width 6: "1"
         RenderText {#text} at (0,0) size 0x0
